@@ -23,6 +23,8 @@ $labels['filterregex'] = 'concuerda con la expresion regular';
 $labels['filternotregex'] = 'no concuerda con la expresion regular';
 $labels['filterunder'] = 'es menos que';
 $labels['filterover'] = 'es mas que';
+$labels['filterbefore'] = 'es antes que';
+$labels['filterafter'] = 'es después que';
 $labels['filteradvoptions'] = 'mas opciones...';
 $labels['spamtest'] = 'Probabilidad de Spam';
 $labels['operator'] = 'Operador';
@@ -94,7 +96,9 @@ $labels['examplefilters'] = 'Filtros de ejemplo';
 $labels['importfilters'] = 'Importar filtros';
 $labels['usedefaultfilter'] = 'Usar filtros por defecto';
 $labels['importfilter'] = 'Importar filtro';
+$labels['moreactions'] = 'Más opciones...';
 $labels['adveditor'] = 'Editor avanzado';
+$labels['stdeditor'] = 'Editor estándar';
 $labels['messageredirectcopy'] = 'Envia una copia a ';
 $labels['messagecopyto'] = 'Copiar mensaje a ';
 $labels['body'] = 'Cuerpo';
@@ -107,6 +111,9 @@ $labels['spamnotchecked'] = 'no seleccionado';
 $labels['spamlevelisgreaterthanequal'] = 'es mayor o igual que';
 $labels['spamlevelislessthanequal'] = 'es menor o igual que';
 $labels['spamlevelequals'] = 'es igual a';
+$labels['i;ascii-casemap'] = 'no distingue mayúsculas/minúsculas';
+$labels['i;octet'] = 'coincide exactamente';
+$labels['i;ascii-numeric'] = 'coincidencia numérica';
 $labels['selectruleset'] = 'Escojer conjunto de reglas';
 $labels['activeruleset'] = '%s (activo)';
 $labels['activateruleset'] = 'Activar este conjunto de reglas';
@@ -117,6 +124,8 @@ $labels['copy'] = 'Copiar';
 $labels['copyexistingfilter'] = 'Copiar los filtros existentes';
 $labels['copytoruleset'] = 'Copiar filtro a otro conjunto de reglas';
 $labels['copyfromruleset'] = 'Copiar filtros desde un conjunto de reglas existente';
+$labels['time'] = 'Tiempo';
+$labels['weekday'] = 'Día de la semana';
 
 $messages = array();
 $messages['nosieverules'] = 'No se han encontrado filtros.';
@@ -129,9 +138,11 @@ $messages['filterdeleteerror'] = 'No se pudo borrar el filtro. Error del servido
 $messages['filterdeleted'] = 'Filtro borrado';
 $messages['filtersaved'] = 'Filtro grabado';
 $messages['filtersaveerror'] = 'Incapaz de grabar filtro. Error en el servidor';
-$messages['vacdaysexp'] = 'El periodo es el numero de dias que el mensaje no será reenviado al mismo usuario, sin importar cuantas veces intente contactar con usted<br /><br />Por ejemplo, si Juan le manda un mensaje, unlunes, y tiene el periodo fijado en 7, Juan recibirá un aviso de vacaciones el lunes pero no recibirá otro hasta el siguiente lunes, sin importar cuántos emails le envíe durente la semana.';
+$messages['vacdaysexp'] = 'El periodo es el numero de dias que el mensaje no será reenviado al mismo usuario, sin importar cuantas veces intente contactar con usted<br /><br />Por ejemplo, si Juan le manda un mensaje, un lunes, y tiene el periodo fijado en 7, Juan recibirá un aviso de vacaciones el lunes pero no recibirá otro hasta el siguiente lunes, sin importar cuántos emails le envíe durente la semana.';
 $messages['vachandleexp'] = 'Se puede usar un manejador para vincular diferentes mensajes de vacaciones todos juntos, una vez se envio un mensaje, no se enviará otro que tenga el mismo manejador durante el periodo definido.';
 $messages['vactoexp'] = 'Lista de destinatarios adicionales que será incluida en la auto respuesta. Si un destinatario no es su dirección principal, y no está en esta lista, no se le enviarán mensajes.';
+$messages['vactoexp_adv'] = 'Separe multiples alias con coma (,). Por ejemplo test1@ejemplo.com,test2@ejemplo.com,test3@ejemplo.com';
+$messages['vactoexp_err'] = 'Error: Los distintos alias deben separarse con coma (,)';
 $messages['norulename'] = 'Debe asignar un nombre al filtro';
 $messages['ruleexists'] = 'Ya hay un filtro con ese nombre. Elija otro';
 $messages['noheader'] = 'Debe ingresar el nombre de la cabecera a verificar';
@@ -146,7 +157,8 @@ $messages['vacdayswrongformat'] = 'Error: El periodo debe ser 1 o más dias';
 $messages['vacnomsg'] = 'Ingrese un texto para el mensaje';
 $messages['notifynomethod'] = 'Ingrese el método por el cual se enviará la notificación';
 $messages['notifynomsg'] = 'Ingrese un texto para su mensaje';
-$messages['sieveruleexp'] = 'Debe definir una o más reglas contra las que se comprobarán los mensajes. Los filtros son ejecutados en el orden e nque aparecen a la izquierda de esta pantalla. Si se encuentra una coincidencia los demás filtros no se comprueban.';
+$messages['sieveruleexp'] = 'Debe definir una o más reglas contra las que se comprobarán los mensajes. Los filtros son ejecutados en el orden en que aparecen a la izquierda de esta pantalla. Si se encuentra una coincidencia los demás filtros no se comprueban.';
+$messages['sieveruleexp_stop'] = 'Debe definir una o más reglas contra las que se comprobarán los mensajes. Los filtros son ejecutados en el orden en que aparecen a la izquierda de esta pantalla, hasta que una acción \'Stop\' se cumpla.';
 $messages['sieveactexp'] = 'Seleccione una de las opciones que figuran abajo. Esta acción será ejecutada por cada mensaje que concuerden con las reglas que figuran arriba.';
 $messages['sieveheadershlp'] = 'Debajo hay algunos ejemplos de cabeceras que pueden verificarse con filtros. Seleccione una cabecera para agregar a la regla o increse una propia en el cuadro de arriba.';
 $messages['movingfilter'] = 'Moviendo filtro...';
@@ -156,13 +168,18 @@ $messages['importother'] = '<b>Importar filtros:</b> Se ha encontrado otro juego
 $messages['switchtoadveditor'] = 'El editor avanzado le permite editar las reglas de sieve directamente. Cualquier cambio que haga será ilegible para el editor normal de reglas y se parderá si graba modificaciones con el editor normal. ¿Quiere continuar?';
 $messages['filterimported'] = 'Filtro importado correctamente';
 $messages['filterimporterror'] = 'No se pudo importar el filtro. Error en el servidor';
+$messages['notifyinvalidmethod'] = 'El método no parece estar escrito en un formato válido, debe ser una URI. Por ejemplo: "mailto: alert@example.com".';
+$messages['nobodycontentpart'] = 'Por favor, introduzca una parte de contenido para prueba';
 $messages['badoperator'] = 'Lo sentimos, el operador que ha seleccionado no se puede usar en esta regla.';
 $messages['filteractionerror'] = 'La acción requerida no está soportada por el servidor.';
 $messages['filtermissingerror'] = 'No ha sido posible encontrar la regla solicitada.';
+$messages['contentpartexp'] = 'El tipo MIME o una parte específica del mensaje debe ser probado. Por ejemplo: `message/rfc822`, `text/html`, `audio/mp3` or `image`.';
 $messages['delrulesetconf'] = 'Está seguro de querer borrar este conjunto de reglas?';
 $messages['rulesetexists'] = 'Ya existe un conjunto de reglas con ese nombre. Por favor, escoja otro.';
 $messages['copyexisting'] = '<b> Copia el siguiente conjunto de reglas:</b> ¿Quiere importar los filtros de un conjunto de reglas existente al conjunto actual?';
 $messages['filtercopied'] = 'Filtro copiado correctamente';
 $messages['nosieverulesets'] = 'No se han encontrado reglas.';
+$messages['baddateformat'] = 'Error: Por favor, introduzca la fecha en el formato AAAA-MM-DD';
+$messages['badtimeformat'] = 'Error: Por favor, introduzca la hora en el formato HH:MM:SS';
 
 ?>
