@@ -12,7 +12,7 @@
 <roundcube:endif />
 <script type="text/javascript" src="/functions.js"></script>
 </head>
-<body onload="rcube_init_mail_ui(); rcmail_ui.popups.sieverulesmenu = {obj:$('#sieverulesactionsmenu'), above:1};">
+<body onload="rcube_init_mail_ui(); rcmail_ui.popups.sieverulesmenu = {id: 'sieverulesactionsmenu', obj:$('#sieverulesactionsmenu'), above:1};">
 
 <roundcube:include file="/includes/taskbar.html" />
 <roundcube:include file="/includes/header.html" />
