@@ -34,7 +34,7 @@
 </style>
 
 </head>
-<body onload="rcube_init_mail_ui(); rcmail_ui.popups.sieverulesmenu = {obj:$('#sieverulesactionsmenu'), above:1};">
+<body onload="rcube_init_mail_ui(); rcmail_ui.popups.sieverulesmenu = {id: 'sieverulesactionsmenu', obj:$('#sieverulesactionsmenu'), above:1};">
 
 <roundcube:include file="/includes/taskbar.html" />
 <roundcube:include file="/includes/header.html" />
