@@ -1,6 +1,10 @@
 Roundcube Webmail SieveRules
 ============================
 
+2010 10 02
+==========
+ * Add debug logging
+
 2010 09 19
 ==========
  * Allow free entry of vacation alias addresses
